--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /**colors**/
 /**********/
 /*for text & links*/
@@ -19,6 +18,23 @@ html {
           box-sizing: inherit;
   background-repeat: no-repeat;
   /* background-position: center; */
+}
+
+body {
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  background: #ffffff;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 li {
@@ -45,6 +61,26 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
+a {
+  stroke: #757575;
+  fill: #757575;
+  color: #212121;
+  -webkit-transition: fill 1550ms cubic-bezier(0.4, 0, 0.2, 1), stroke 1250ms cubic-bezier(0.4, 0, 0.2, 1), color 1550ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 1550ms cubic-bezier(0.4, 0, 0.2, 1), stroke 1250ms cubic-bezier(0.4, 0, 0.2, 1), color 1550ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+a:hover {
+  color: #2196f3;
+  cursor: pointer;
+  -webkit-transition: fill 1550ms cubic-bezier(0.4, 0, 0.2, 1), color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 1550ms cubic-bezier(0.4, 0, 0.2, 1), color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .button {
   padding: 6px 22px;
   font-family: Roboto;
@@ -68,6 +104,7 @@ a {
 .button__filter:hover {
   color: #ffffff;
   background-color: #188ce8;
+  cursor: pointer;
 }
 
 .button__hero {
@@ -77,6 +114,7 @@ a {
 
 .button__hero:hover {
   background-color: #188ce8;
+  cursor: pointer;
 }
 
 .button__submit {
@@ -86,22 +124,134 @@ a {
 
 .button__submit:hover {
   background-color: #188ce8;
+  cursor: pointer;
 }
 
-/* Отменяем подчеркивание у ссылок 
-           задаём параметры шрифтов*/
-a {
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.header .header__nav {
+  padding-right: 177px;
+}
+
+/* .web,
+.studio  */
+.logo {
+  margin: 0;
+  display: inline-block;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: #2196f3;
+  padding: 0;
+}
+
+.logo--up {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
   color: #212121;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-body {
-  color: #757575;
-  font-family: "Roboto", sans-serif;
+.logo--down {
+  color: #ffffff99;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 294px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   font-size: 14px;
-  line-height: 1.5;
-  letter-spacing: 0.03em;
-  background: #ffffff;
+  line-height: 1.15;
+  letter-spacing: 2%;
+}
+
+.nav__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.nav__link:hover {
+  display: block;
+  color: #2196f3;
+}
+
+.nav-after {
+  position: relative;
+  /* content: ""; */
+  background-image: url(../images/2/line-portfolio.svg);
+  background-position: right bottom;
+}
+
+.nav-after::after {
+  position: absolute;
+  color: transparent;
+  content: "0";
+  display: block;
+}
+
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 333px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contacts__link {
+  padding-left: 25px;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 2%;
+  color: #757575;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts__link:hover {
+  stroke: #2196f3;
+  fill: #2196f3;
+}
+
+.envelope {
+  position: absolute;
+  width: 21px;
+  height: 14px;
+  left: 0;
+}
+
+.smartphone {
+  position: absolute;
+  width: 12px;
+  height: 16px;
+  left: 6px;
 }
 /*# sourceMappingURL=main.css.map */
