--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -10,11 +10,12 @@ $colorTxt-primary: #757575;
 $colorTxt-secondary: #212121;
 $colorTxt-forlinkDarkBg: #ffffff99;
 $colorTxt-socialLinkColor: #afb1b8;
-$colorTxt-forlinkLightBg: #757575;
+$colorTxt-forlinkLightBg: #212121;
 $colorTxt-accent: #2196f3;
 /*for BG*/
 $colorBg-primary: #2f303a;
 $colorBg-secondary: #f5f4fa;
+//$colorBg-main: #ececec;
 $colorBg-Dark: #2f303a;
 $colorBg-Light: #f5f4fa;
 $colorBg-accent: #00000066;
@@ -33,7 +34,7 @@ $colorBtnBdr-hover: #188ce8;
 
 /*for border*/
 
-$colorBorder-default: #eee;
+//$colorBorder-default: #eee;
 $colorBorder-default: #ececec;
 $colorBtn-secondaryBorder: #eeeeee;
 $colorBtn-placeholder: #afb1b8;
