--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -6,10 +6,11 @@ $colorTxt-secondary:#212121;
 $colorLight: #ffffff;
 $colorDark: #000000;
 /*for text & links*/
+$colorTxt-Light: #ffffff;
 $colorTxt-primary: #757575;
 $colorTxt-secondary: #212121;
 $colorTxt-forlinkDarkBg: #ffffff99;
-$colorTxt-socialLinkColor: #afb1b8;
+$colorTxt-socialLink: #afb1b8;
 $colorTxt-forlinkLightBg: #212121;
 $colorTxt-accent: #2196f3;
 /*for BG*/
