--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,17 +11,7 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
   }
-  .header__nav {
+  &__nav {
      padding-right: 177px;
     }
-    .nav{
-        
-    }
-    // .nav li + li {
-    //     margin-left: 50px;
-    //   } 
-    .header__contacts{
-        //width: 333px;
-        //justify-content: space-between;
-    }   
 }
