--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,12 +6,19 @@
 @import './components/buttons';
 @import './components/inputs';
 @import './components/links';
+@import './components/radiobutt';
+@import './components/checkbox';
+@import './components/textareas';
 /**BLOCKS**/
 @import './blocks/logo';
 @import './blocks/nav';
 @import './blocks/contacts';
 @import './blocks/social';
 @import './blocks/team-card';
+@import './blocks/adderess';
+@import './blocks/filters';
+@import './blocks/gallery';
+@import './blocks/any-card';
 /**LAYOUTS**/
 @import './layout/header';
 @import './layout/hero';
