--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,15 +1,15 @@
-/**BASA**/
+//**BASA**/
 @import './utils/variable';
 @import './defoult/defoult';
 @import './defoult/pageset';
-/**COMPONENTS**/
+//**COMPONENTS**/
 @import './components/buttons';
 @import './components/inputs';
 @import './components/links';
 @import './components/radiobutt';
 @import './components/checkbox';
 @import './components/textareas';
-/**BLOCKS**/
+//**BLOCKS**/
 @import './blocks/logo';
 @import './blocks/nav';
 @import './blocks/contacts';
@@ -19,7 +19,7 @@
 @import './blocks/filters';
 @import './blocks/gallery';
 @import './blocks/any-card';
-/**LAYOUTS**/
+//**LAYOUTS**/
 @import './layout/header';
 @import './layout/hero';
 @import './layout/advantages';
