--- a/css/main.css
+++ b/css/main.css
@@ -20,28 +20,6 @@ html {
   /* background-position: center; */
 }
 
-body {
-  color: #757575;
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  line-height: 1.5;
-  letter-spacing: 0.03em;
-  background: #ffffff;
-}
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 li {
   list-style-type: none;
 }
@@ -57,22 +35,40 @@ p {
   margin: 0;
 }
 
-li {
-  list-style-type: none;
-}
-
-a {
-  text-decoration: none;
-}
-
 img {
   display: block;
   max-width: 100%;
 }
 
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+body {
+  color: #757575;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  letter-spacing: 0.03em;
+  background: #ffffff;
+}
+
 .invisible {
   position: absolute;
   opacity: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .button {
@@ -127,27 +123,42 @@ img {
   cursor: pointer;
 }
 
-.header {
-  border-bottom: 1px solid #ececec;
+a {
+  text-decoration: none;
 }
 
-.header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+.checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: inline-block;
 }
 
-.header__nav {
-  padding-right: 177px;
+.checkbox:checked + .checkbox__icon {
+  background-color: #2196f3;
+  border: 2px solid #2196f3;
+  background-image: url(../images/icon/svgM/Vector1.svg);
+}
+
+.checkbox:focus + .checkbox__icon,
+.checkbox:hover + .checkbox__icon {
+  border: 2px solid #2196f3;
+}
+
+.checkbox__icon {
+  display: inline-block;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  background-color: #ffffff;
+  -webkit-transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 
 /* .web,
@@ -237,6 +248,7 @@ img {
 }
 
 .contacts__link:hover {
+  color: #2196f3;
   stroke: #2196f3;
   fill: #2196f3;
 }
@@ -253,6 +265,93 @@ img {
   width: 12px;
   height: 16px;
   left: 6px;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 208px;
+  height: 44px;
+}
+
+.social__block {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  border-color: darkgray;
+}
+
+.social__link {
+  display: block;
+  fill: #afb1b8;
+}
+
+.social__icon {
+  width: 44px;
+  height: 44px;
+}
+
+.team-card {
+  width: 270px;
+  min-height: 428px;
+  font-size: 16px;
+  line-height: 1.18;
+  background-color: var(--white-txt-color, #ffffff);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.team-card__position {
+  display: inline-block;
+  padding: 30px 24px 16px;
+  font-size: 16px;
+  line-height: 0.9;
+  /* line-height: 1; */
+}
+
+.team-card__name {
+  display: block;
+  font-weight: 700;
+  color: #212121;
+}
+
+.team-card__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
+
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+
+.header__nav {
+  padding-right: 177px;
 }
 
 .hero {
@@ -336,6 +435,25 @@ img {
   padding-top: 50px;
 }
 
+.craft__item {
+  position: relative;
+}
+
+.craft__bg-title {
+  position: absolute;
+  padding-top: 27px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.2;
+  width: 100%;
+  height: 70px;
+  bottom: 0px;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #ffffff;
+}
+
 .developers {
   background-color: #f5f4fa;
 }
@@ -357,67 +475,74 @@ img {
           justify-content: space-between;
 }
 
-.social {
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+}
+
+.clients__title {
+  font-style: 700;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 3%;
+  color: #212121;
+  padding-bottom: 50px;
+}
+
+.clients__items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 208px;
-  height: 44px;
 }
 
-.social__block {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  border-color: darkgray;
-}
-
-.social__link {
-  display: block;
-  fill: #afb1b8;
-}
-
-.social__icon {
-  width: 44px;
-  height: 44px;
-}
-
-.team-card {
-  width: 270px;
-  min-height: 428px;
-  font-size: 16px;
-  line-height: 1.18;
-  background-color: var(--white-txt-color, #ffffff);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.team-card__position {
-  display: inline-block;
-  padding: 30px 24px 16px;
-  font-size: 16px;
-  line-height: 0.9;
-  /* line-height: 1; */
-}
-
-.team-card__name {
-  display: block;
-  font-weight: 700;
-  color: #212121;
-}
-
-.team-card__title {
+.clients__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 170px;
+  height: 92px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  fill: #afb1b8;
+}
+
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  fill: #afb1b8;
+}
+
+.clients__icon {
+  width: 106px;
+  height: 40px;
+  fill: inherit;
+}
+
+.clients__link {
+  fill: inherit;
+}
+
+.clients__item:hover {
+  border: 1px solid #2196f3;
+  fill: #2196f3;
+  cursor: pointer;
+}
+
+.footer {
+  background-color: #2f303a;
 }
 /*# sourceMappingURL=main.css.map */
