--- a/scss/default/_pageset.scss
+++ b/scss/default/_pageset.scss
@@ -25,3 +25,8 @@ body {
     opacity: 0;
 }
 
+a {
+    text-decoration: none;
+    // color: $colorTxt-socialLink;
+    // transition: color 250ms $cubic;
+  }
