--- a/scss/layout/_craft.scss
+++ b/scss/layout/_craft.scss
@@ -13,4 +13,21 @@
         justify-content: space-between;
         padding-top: 50px;
     }
+    &__item {
+        position: relative;
+    }
+    &__bg-title {
+        position: absolute;
+        padding-top: 27px;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 1.2;
+        width: 100%;
+        height: 70px;
+        bottom: 0px;
+        background-color: rgba(47, 48, 58, 0.8);
+        color: #ffffff;
+    }
 }
