--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 //**BASA**/
 @import './utils/variable';
-@import './defoult/defoult';
-@import './defoult/pageset';
+@import './default/default';
+@import './default/pageset';
 //**COMPONENTS**/
 @import './components/buttons';
 @import './components/inputs';
@@ -15,7 +15,7 @@
 @import './blocks/contacts';
 @import './blocks/social';
 @import './blocks/team-card';
-@import './blocks/adderess';
+@import './blocks/address';
 @import './blocks/filters';
 @import './blocks/gallery';
 @import './blocks/any-card';
