--- a/scss/default/_pageset.scss
+++ b/scss/default/_pageset.scss
@@ -30,3 +30,9 @@ a {
     // color: $colorTxt-socialLink;
     // transition: color 250ms $cubic;
   }
+
+  @mixin socicon($colorTXT, $colorBg:#ffffff10) {
+    fill: $colorTXT;
+    background-color: $colorBg;
+    color: $colorTXT;
+} 
