--- a/scss/utils/_variable.scss
+++ b/scss/utils/_variable.scss
@@ -13,6 +13,7 @@ $colorTxt-forlinkDarkBg: #ffffff99;
 $colorTxt-socialLink: #afb1b8;
 $colorTxt-forlinkLightBg: #212121;
 $colorTxt-accent: #2196f3;
+
 /*for BG*/
 $colorBg-primary: #2f303a;
 $colorBg-secondary: #f5f4fa;
@@ -22,7 +23,7 @@ $colorBg-Light: #f5f4fa;
 $colorBg-accent: #00000066;
 $colorBg-modal: #2f303a66;
 $colorBg-img: #c4c4c4;
-$colorBg-overlay-BgColor: rgba(33, 150, 243, 0.9);
+$colorBg-overlay: rgba(33, 150, 243, 0.9);
 /*for btn*/
 $colorBtnBg-filter: #f5f4fa;
 $colorBtnBg-main: #ececec;
