--- a/scss/blocks/_social.scss
+++ b/scss/blocks/_social.scss
@@ -1,3 +1,5 @@
+@import '../mainmod.scss';
+// socialLink $colorTxt-socialLink
 .social{
     display: flex;
     justify-content: space-between;
@@ -5,27 +7,20 @@
     width: 208px;
     height: 44px;
 
-    
-
-    &__block{
-        //padding: 12px;
+    &__link{
+        display: flex;
         width: 44px;
         height: 44px;
         border-radius: 50%;
-        border-color: darkgray;
-
+        @include socicon($colorTXT: $colsocicon);
     }
 
-    &__link{
-        display: block;
-        fill: $colorTxt-socialLink;
-    }
-
-    &__icon{
-        //padding: 12px;
-        width: 44px;
-        height: 44px;
-
+    &__link:focus,
+    &__link:hover {
+      background-color: $colorTxt-accent;
+      color: #ffffff;
+      fill: #ffffff;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
 }
