--- a/scss/default/_default.scss
+++ b/scss/default/_default.scss
@@ -14,10 +14,9 @@ li {
     list-style-type: none;
 }
 
-h1,
-h2,
-h3,
-h4,
+html,
+body,
+ol,
 ul,
 li,
 p {
@@ -30,5 +29,11 @@ img {
     max-width: 100%;
 }
 
-
+h1,
+h2,
+h3,
+h4,
+h5 {
+    margin: 0;
+}
 
