--- a/scss/layout/_developers.scss
+++ b/scss/layout/_developers.scss
@@ -1,8 +1,8 @@
 .developers {
 
     background-color: $colorBg-secondary;
-
-
+    // $col-soc-icon: $colorTxt-socialLink;
+    $colsocicon: $colorTxt-accent;
 
     &__title{
         color: $colorTxt-secondary;
