--- a/css/main.css
+++ b/css/main.css
@@ -293,14 +293,12 @@ a {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: red;
+  fill: #afb1b8;
   background-color: #ffffff10;
-  color: red;
 }
 
 .social__link:focus, .social__link:hover {
   background-color: #2196f3;
-  color: #ffffff;
   fill: #ffffff;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -557,12 +555,142 @@ a {
   background-color: #2f303a;
 }
 
+.footer .social-title {
+  text-transform: uppercase;
+  color: var(--white-txt-color);
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
+}
+
 .footer-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.footer__social {
+  width: 208px;
+  padding-top: 15px;
+  margin-left: 70px;
+}
+
+.footer .social-footer {
+  width: 208px;
+  padding-top: 15px;
+  margin-left: 70px;
+}
+
+.address {
+  margin-top: 20px;
+  font-style: normal;
+}
+
+.address__map {
+  color: #ffffff;
+}
+
+.address__link {
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--footer-link-color, rgba(255, 255, 255, 0.6));
+}
+
+/**/
+.footer__email-foo {
+  padding-top: 10px;
+  padding-bottom: 15px;
+  width: 570px;
+  height: 88px;
+  margin-left: 93px;
+}
+
+.footer__email-foo > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.footer__email-foo > div > input {
+  width: 358px;
+  height: 50px;
+  padding-left: 65px;
+  color: #ffffff;
+  border-style: none;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__email-foo label[for="email-label"] {
+  position: absolute;
+  top: 18px;
+  left: 16px;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 14px;
+  line-height: 1.14;
+  z-index: 1000;
+}
+
+.footer__email-foo > div > input:hover,
+.footer__email-foo > div > input:focus {
+  border: 1px solid #188ce8;
+}
+
+.footer__email-foo > div > button {
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  margin-left: 12px;
+  -webkit-transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer__email-foo > div > button:hover {
+  cursor: pointer;
+  background: #188ce8;
+  border: 1px solid #188ce8;
+  /* transform: rotate(360deg); */
+  -webkit-transition: fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), fill 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.botton__icon {
+  position: relative;
+  display: inline-block;
+  top: 6px;
+  left: 5px;
+  fill: #ffffff;
+  width: 24px;
+  height: 24px;
+  /* transform: rotate(1deg); */
+}
+
+/* .email-foo > div > button:hover~ */
+.botton__icon:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**/
