--- a/scss/mainmod.scss
+++ b/scss/mainmod.scss
@@ -3,3 +3,8 @@
   } else {
     $colsocicon: #afb1b8;
   }
+  @mixin socicon($colorTXT, $colorBg:#ffffff10) {
+    fill: $colorTXT;
+    background-color: $colorBg;
+    color: $colorTXT;
+}   
