--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,16 +1,149 @@
+// @mixin socicon($colorTXT, $colorBg:#ffffff10) {
+//     fill: $colorTXT;
+//     background-color: $colorBg;
+//     color: $colorTXT;
+// } 
 .footer{
     background-color: $colorBg-Dark;
-    //$colsocicon: #fff;
+    //$colsocicon: #fff;$colorTxt-socialLink
     
+    // &__address{
+    //     margin-top: 20px;
+    //     font-style: normal;
+    //   }
+    .social-title {
+        text-transform: uppercase;
+        color: var(--white-txt-color);
+        font-size: 14px;
+        line-height: 1.14;
+        margin-bottom: 20px;
+    }
+
     &-section {
         display: flex;
         padding-top: 60px;
         padding-bottom: 60px;
         
       }
+
+      &__social {
+        width: 208px;
+        padding-top: 15px;
+        margin-left: 70px;
+      }  
     
     &__socicon{
-        //$colsocicon: $colorTxt-Light;
+        $colsocicon: #fff;
 
     }
+    .social-footer {
+        width: 208px;
+        padding-top: 15px;
+        margin-left: 70px;
+      }
 }
+.address{
+    margin-top: 20px;
+    font-style: normal;
+  }
+
+.address__map {
+  color:#ffffff;
+}
+
+.address__link {
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--footer-link-color, rgba(255, 255, 255, 0.6));
+}
+/**/
+.footer__email-foo {
+    padding-top: 10px;
+    padding-bottom: 15px;
+    width: 570px;
+    height: 88px;
+    margin-left: 93px;
+  }
+  
+  .footer__email-foo > div {
+    display: flex;
+    position: relative;
+  }
+  
+  .footer__email-foo > div > input {
+    width: 358px;
+    height: 50px;
+    padding-left: 65px;
+    color: #ffffff;
+    border-style: none;
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .footer__email-foo label[for="email-label"] {
+    position: absolute;
+    top: 18px;
+    left: 16px;
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 14px;
+    line-height: 1.14;
+    z-index: 1000;
+  }
+  
+  .footer__email-foo > div > input:hover,
+  .footer__email-foo > div > input:focus {
+    border: 1px solid #188ce8;
+  }
+  
+  .footer__email-foo > div > button {
+    width: 200px;
+    height: 50px;
+    background: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    color: #ffffff;
+  
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    margin-left: 12px;
+    transition: 
+    /* transform 260ms cubic-bezier(0.4, 0, 0.2, 1)
+    ,  */
+    background-color 260ms cubic-bezier(0.4, 0, 0.2, 1)
+   
+    ;
+  }
+  
+  .footer__email-foo > div > button:hover {
+    cursor: pointer;
+    background: #188ce8;
+    border: 1px solid #188ce8;
+    /* transform: rotate(360deg); */
+    transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1)
+    , fill 1260ms cubic-bezier(0.4, 0, 0.2, 1)
+    ;
+  }
+  
+  .botton__icon {
+    position: relative;
+    display: inline-block;
+    top: 6px;
+    left: 5px;
+    fill: #ffffff;
+    width: 24px;
+    height: 24px;
+    /* transform: rotate(1deg); */
+    
+  }
+  /* .email-foo > div > button:hover~ */
+  .botton__icon:hover {
+    
+    transform: rotate(360deg);
+    transition: transform 1260ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
