--- a/css/main.css
+++ b/css/main.css
@@ -555,6 +555,10 @@ a {
   background-color: #2f303a;
 }
 
+.footer .logo--down {
+  color: #ffffff;
+}
+
 .footer .social-title {
   text-transform: uppercase;
   color: var(--white-txt-color);
@@ -577,10 +581,18 @@ a {
   margin-left: 70px;
 }
 
-.footer .social-footer {
+.footer__socicon {
+  fill: #fff;
+}
+
+.social-footer {
   width: 208px;
   padding-top: 15px;
   margin-left: 70px;
+}
+
+.social__link {
+  fill: #ffffff;
 }
 
 .address {
@@ -599,9 +611,16 @@ a {
 }
 
 /**/
+.footer__title {
+  text-transform: uppercase;
+  color: var(--white-txt-color);
+  font-size: 14px;
+  line-height: 1.14;
+  margin-bottom: 20px;
+}
+
 .footer__email-foo {
-  padding-top: 10px;
-  padding-bottom: 15px;
+  padding-top: 15px;
   width: 570px;
   height: 88px;
   margin-left: 93px;
@@ -715,6 +734,7 @@ a {
   transition: transform 260ms linear, opacity 260ms linear, -webkit-transform 260ms linear;
 }
 
+.button__close,
 .btn-modal {
   outline-style: none;
   padding: 0;
@@ -729,6 +749,7 @@ a {
   background-color: #ffffff;
 }
 
+.modal-close,
 .close-form {
   display: block;
   width: 20px;
@@ -740,6 +761,20 @@ a {
   cursor: pointer;
 }
 
+.modal-icon,
+.icon-modal {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: 12px;
+  top: 10px;
+  fill: #212121;
+  -webkit-transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:focus,
+.modal-close:hover,
 .btn-modal:focus,
 .close-form:focus,
 .close-form:hover {
@@ -795,7 +830,24 @@ a {
   transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cont-textarea,
+.modal-textarea {
+  display: block;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  margin-top: 28px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 120px;
+  padding-left: 40px;
+  padding-top: 10px;
+  overflow: hidden;
+  resize: none;
+  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal > ul > li {
   position: relative;
 }
@@ -804,7 +856,12 @@ a {
   margin-top: 28px;
 }
 
+.dd {
+  position: relative;
+}
+
 /* .cont-textarea > label, */
+.modal-labelarea,
 .modal > ul > li label {
   position: absolute;
   left: 60px;
@@ -823,18 +880,7 @@ a {
   cursor: pointer;
 }
 
-.icon-modal {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 12px;
-  top: 10px;
-  fill: #212121;
-  -webkit-transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.cont-textarea > label {
+.modal-labelarea {
   position: absolute;
   -webkit-transform: translate(0%, 0%) scale(150%);
           transform: translate(0%, 0%) scale(150%);
@@ -850,26 +896,8 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms linear, -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal > div > textarea {
-  display: block;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  margin-top: 28px;
-  margin-bottom: 20px;
-  width: 100%;
-  height: 120px;
-  padding-left: 40px;
-  padding-top: 10px;
-  overflow: hidden;
-  resize: none;
-  -webkit-transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 260ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.cont-textarea > textarea:focus + label,
-.cont-textarea > textarea:not(:placeholder-shown) + label,
+.modal-textarea:not(:placeholder-shown) + label,
+.modal-textarea:focus + label,
 .modal > ul > li input:not(:placeholder-shown) + label,
 .modal > ul > li input:focus + label {
   outline-style: none;
@@ -877,7 +905,7 @@ a {
           transform: translate(-60px, -30px) scale(100%);
 }
 
-.cont-textarea > textarea::-webkit-input-placeholder,
+.modal-textarea::-webkit-input-placeholder,
 .modal > ul > li input::-webkit-input-placeholder {
   outline-style: none;
   color: #2196f3;
@@ -889,7 +917,7 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cont-textarea > textarea:-ms-input-placeholder,
+.modal-textarea:-ms-input-placeholder,
 .modal > ul > li input:-ms-input-placeholder {
   outline-style: none;
   color: #2196f3;
@@ -900,7 +928,7 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cont-textarea > textarea::-ms-input-placeholder,
+.modal-textarea::-ms-input-placeholder,
 .modal > ul > li input::-ms-input-placeholder {
   outline-style: none;
   color: #2196f3;
@@ -911,7 +939,7 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cont-textarea > textarea::placeholder,
+.modal-textarea::placeholder,
 .modal > ul > li input::placeholder {
   outline-style: none;
   color: #2196f3;
@@ -923,7 +951,7 @@ a {
   transition: transform 260ms cubic-bezier(0.4, 0, 0.2, 1), color 260ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.cont-textarea > textarea:focus::-webkit-input-placeholder,
+.modal-textarea:focus::-webkit-input-placeholder,
 .modal > ul > li input:focus::-webkit-input-placeholder {
   outline-style: none;
   color: #afb1b8;
@@ -931,21 +959,21 @@ a {
           transform: translate(0, 0);
 }
 
-.cont-textarea > textarea:focus:-ms-input-placeholder,
+.modal-textarea:focus:-ms-input-placeholder,
 .modal > ul > li input:focus:-ms-input-placeholder {
   outline-style: none;
   color: #afb1b8;
   transform: translate(0, 0);
 }
 
-.cont-textarea > textarea:focus::-ms-input-placeholder,
+.modal-textarea:focus::-ms-input-placeholder,
 .modal > ul > li input:focus::-ms-input-placeholder {
   outline-style: none;
   color: #afb1b8;
   transform: translate(0, 0);
 }
 
-.cont-textarea > textarea:focus::placeholder,
+.modal-textarea:focus::placeholder,
 .modal > ul > li input:focus::placeholder {
   outline-style: none;
   color: #afb1b8;
@@ -953,24 +981,24 @@ a {
           transform: translate(0, 0);
 }
 
-.cont-textarea > textarea:focus,
-.cont-textarea > textarea:hover,
+.modal-textarea:focus,
+.modal-textarea:hover,
 .modal > ul > li input:focus,
 .modal > ul > li input:hover {
   outline-style: none;
   border-color: #2196f3;
 }
 
-.cont-textarea > textarea:hover + label,
-.cont-textarea > textarea:focus + label,
+.modal-textarea:hover + label,
+.modal-textarea:focus + label,
 .modal > ul > li input:focus + label,
 .modal > ul > li input:hover + label {
   outline-style: none;
   color: #2196f3;
 }
 
-.modal > ul > li input:focus ~ .icon-modal,
-.modal > ul > li input:hover ~ .icon-modal {
+.modal > ul > li input:focus ~ .modal-icon,
+.modal > ul > li input:hover ~ .modal-icon {
   fill: #2196f3;
 }
 
@@ -1046,7 +1074,7 @@ a {
   background-image: url(../images/icon/svgM/Vector1.svg);
 }
 
-.us {
+.modal__link {
   color: #2196f3;
   text-decoration: none;
   margin-left: 10px;
@@ -1054,7 +1082,7 @@ a {
   transition: all 1260ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.us:hover {
+.modal__link:hover {
   color: #188ce8;
   text-decoration: underline;
   cursor: pointer;
