--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,29 @@ a {
   text-decoration: none;
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #00000066;
+  opacity: 1;
+  -webkit-transition: opacity 260ms linear;
+  transition: opacity 260ms linear;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  opacity: 0.1;
+  -webkit-transform: translate(-50%, -50%) scale(10%);
+          transform: translate(-50%, -50%) scale(10%);
+}
+
 .button {
   padding: 6px 22px;
   font-family: Roboto;
@@ -861,7 +884,6 @@ a {
 }
 
 /* .cont-textarea > label, */
-.modal-labelarea,
 .modal > ul > li label {
   position: absolute;
   left: 60px;
