--- a/scss/default/_pageset.scss
+++ b/scss/default/_pageset.scss
@@ -31,3 +31,24 @@ a {
     // transition: color 250ms $cubic;
   }
 
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000066;
+    opacity: 1;
+    transition: opacity 260ms linear;
+  }
+  
+  .backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  .backdrop.is-hidden .modal {
+    opacity: 0.1;
+    transform: translate(-50%, -50%) scale(10%);
+  }
+  
